# kdeconnect

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  control  main.m
ios/: Makefile  entitlements.plist  kdeconnectd-Bridging-Header.h  main.m  main.swift  make.sh  objc.m  server.h  server.m
ios/app/: ContentView.swift  DaemonSettingsView.swift  Makefile  SafeIndex.swift  SettingsView.swift  entitlements.plist  kdeconnectjb-Bridging-Header.h  objc.m  spawn.m
ios/app/Resources/: Icon.xcf  Info.plist
ios/app/src/: Alert++.swift  ContentView.swift  DateTime+Extensions.swift  MusicSlider.swift  PresenterView.swift  SettingsView.swift  VolumeButtonHandler.swift  kdeconnectjbApp.swift
ios/app/src/Device/: ClipboardView.swift  CommandsView.swift  ConnectivityView.swift  DeviceView.swift  MprisView.swift  ShareView.swift  VolumeView.swift
ios/headers/: CTCall.h  CTDataStatus.h  CTSignalStrengthInfo.h  CTTelephonyCenter.h  CTXPCServiceSubscriptionContext.h  CoreTelephonyClient.h  IOPSKeys.h  IOPowerSources.h  MPVolumeController.h  MRArtwork.h  MRContentItem.h  MRContentItemMetadata.h  MobileGestalt.h  kern_memorycontrol.h
ios/headers/MobileWiFi/: WiFiManager.h
ios/tweak/: Makefile  Tweak.xm
kdeconnect/: Cargo.toml
kdeconnect/src/: config.rs  device.rs  lib.rs  packets.rs  util.rs
kdeconnectjb/: Cargo.toml  build.rs
kdeconnectjb/src/: callbacks.rs  device.rs  lib.rs  utils.rs
rust/: Cargo.toml
rust/src/: device.rs  ffi.rs  packets.rs
