[package]
name = "kdeconnectjb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
async-trait = "0.1.79"
dashmap = { version = "5.5.3", features = ["inline"] }
mdns-sd = "0.10.5"
rcgen = "0.13.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
time = { version = "0.3.34", features = ["std"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "logging", "tls12"] }

[build-dependencies]
cbindgen = "0.26.0"
